# treb-cli-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  MIGRATION.md  PLAN_AMENDMENT.md  README.md  clippy.toml
backends/v1.6.0-rc1/: Cargo.toml
crates/treb-cli/: Cargo.toml  build.rs
crates/treb-cli/src/: lib.rs  main.rs  output.rs
crates/treb-cli/src/commands/: addressbook.rs  compose.rs  config.rs  dev.rs  fork.rs  gen_deploy.rs  init.rs  list.rs  migrate.rs  mod.rs  networks.rs  prune.rs  queued.rs  receipt.rs  register.rs  reset.rs  resolve.rs  run.rs  show.rs  sync.rs  tag.rs  verify.rs  version.rs
crates/treb-cli/src/ui/: badge.rs  broadcast_display.rs  color.rs  emoji.rs  interactive.rs  mod.rs  prompt.rs  selector.rs  spinner.rs  terminal.rs  tree.rs
crates/treb-cli/tests/: cli_compatibility_aliases.rs  cli_completions.rs  cli_compose.rs  cli_config.rs  cli_error_format.rs  cli_gen_deploy.rs  cli_go_registry_compat.rs  cli_init.rs  cli_list_show.rs  cli_networks.rs  cli_prune_reset_migrate.rs  cli_run.rs  cli_tag.rs  cli_verify.rs  cli_version.rs  e2e_deployment_workflow.rs  e2e_fork_exec_upgrade.rs  e2e_fork_workflow.rs  e2e_governor_deploy.rs  e2e_governor_workflow.rs  e2e_mixed_sender.rs  e2e_prune_reset_workflow.rs  e2e_register_workflow.rs  e2e_registry_consistency.rs  e2e_routing_errors.rs  e2e_safe_deploy.rs  e2e_safe_workflow.rs  e2e_workflow.rs  fixture_compile.rs  fork_integration.rs  framework_anvil_node.rs  framework_context.rs  framework_port_rewrite.rs  framework_runner.rs  framework_workdir.rs  integration_addressbook.rs  integration_compose.rs  integration_compose_libraries.rs  integration_compose_resume.rs  integration_config.rs  (+21 more)
crates/treb-cli/tests/e2e/: deploy_governor.rs  deploy_safe.rs  mod.rs
crates/treb-cli/tests/fixtures/compose/: bad-dep.yaml  chain.yaml  cycle.yaml  diamond.yaml  simple.yaml  single.yaml
crates/treb-cli/tests/fixtures/gen-deploy-project/: foundry.toml
crates/treb-cli/tests/fixtures/project/: .env.example  .gitignore  foundry.toml  treb.toml
crates/treb-cli/tests/fixtures/safe/: governor-config.toml  propose-request.json  safe-config.toml  safe-service-response.json
crates/treb-cli/tests/framework/: anvil_node.rs  cleanup.rs  context.rs  golden.rs  integration_test.rs  mod.rs  normalizer.rs  pool.rs  runner.rs  snapshot.rs  workdir.rs
crates/treb-cli/tests/golden/compose_dry_run_chain/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dry_run_diamond/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dry_run_json_chain/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dry_run_json_simple/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dry_run_resume_verbose/: commands.golden
crates/treb-cli/tests/golden/compose_dry_run_simple/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dry_run_single/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_dump_command_chain/: commands.golden
crates/treb-cli/tests/golden/compose_dump_command_simple/: commands.golden
crates/treb-cli/tests/golden/compose_error_cycle/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_error_empty_components/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_error_file_not_found/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_error_invalid_yaml/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_error_self_dep/: commands.golden  output.golden
crates/treb-cli/tests/golden/compose_error_unknown_dep/: commands.golden  output.golden
crates/treb-cli/tests/golden/config_remove_show_round_trip/: commands.golden
crates/treb-cli/tests/golden/config_set_invalid_key/: output.golden
crates/treb-cli/tests/golden/config_set_show_round_trip/: commands.golden  config.local.golden  output.golden
crates/treb-cli/tests/golden/config_show_default/: commands.golden  output.golden
crates/treb-cli/tests/helpers/: mod.rs
crates/treb-config/: Cargo.toml
crates/treb-config/src/: env.rs  foundry.rs  lib.rs  local.rs  resolver.rs  trebfile.rs  trebfile_v1.rs  types.rs  validation.rs
crates/treb-config/tests/fixtures/: treb_v1.toml  treb_v2.toml
crates/treb-core/: Cargo.toml
crates/treb-core/src/: error.rs  lib.rs
crates/treb-core/src/types/: contract.rs  deployment.rs  enums.rs  fork.rs  governor_proposal.rs  ids.rs  mod.rs  safe_transaction.rs  transaction.rs
crates/treb-core/tests/: serde_golden.rs
crates/treb-core/tests/fixtures/: deployment.json  deployment_with_proxy.json  deployments_map.json  safe_transaction.json  safe_txs_map.json  transaction.json  transactions_map.json
crates/treb-forge/: Cargo.toml
crates/treb-forge/src/: anvil.rs  artifacts.rs  broadcast.rs  compiler.rs  console.rs  createx.rs  foundry_compat.rs  fund.rs  governor.rs  lib.rs  provider.rs  script.rs  sender.rs  sender_config.rs  version.rs
crates/treb-forge/src/events/: abi.rs  decoder.rs  deployments.rs  mod.rs  params.rs  proxy.rs
crates/treb-forge/src/pipeline/: broadcast_writer.rs  compose.rs  compose_plan.rs  duplicates.rs  fork_routing.rs  hydration.rs  mod.rs  orchestrator.rs  reducer.rs  routing.rs  simulation.rs  types.rs
crates/treb-forge/tests/: anvil_integration_test.rs  events_integration_test.rs  integration_test.rs  pipeline_integration.rs  sender_integration_test.rs  sol_roundtrip_test.rs
crates/treb-registry/: Cargo.toml
crates/treb-registry/src/: io.rs  lib.rs  lookup.rs  migrations.rs  registry.rs  solidity_registry.rs  types.rs
crates/treb-registry/src/store/: addressbook.rs  deployments.rs  fork_state.rs  governor_proposals.rs  mod.rs  queued_index.rs  safe_transactions.rs  transactions.rs
crates/treb-registry/tests/: go_compat_deserialize.rs
crates/treb-safe/: Cargo.toml
crates/treb-safe/src/: client.rs  eip712.rs  lib.rs  multi_send.rs  types.rs
crates/treb-safe/tests/: client_tests.rs
crates/treb-verify/: Cargo.toml
crates/treb-verify/src/: lib.rs
(+525 files in other folders)
