[workspace]
members = ["crates/treb-cli", "crates/treb-core", "crates/treb-config", "crates/treb-registry", "crates/treb-forge", "crates/treb-verify", "crates/treb-safe"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["treb contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
treb-core = { path = "crates/treb-core" }
treb-config = { path = "crates/treb-config" }
treb-registry = { path = "crates/treb-registry" }
treb-forge = { path = "crates/treb-forge" }
treb-verify = { path = "crates/treb-verify" }
treb-safe = { path = "crates/treb-safe" }

# Foundry — pinned to tag v1.5.1 (commit b0a9dd9ceda36f63e2326ce530c10e6916f4b8a2)
foundry-config = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-compilers = "0.19.14"
forge-script = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
forge-script-sequence = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-cheatcodes = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-wallets = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-linking = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
forge-verify = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }
anvil = { git = "https://github.com/foundry-rs/foundry", tag = "v1.5.1" }

# Alloy — versions aligned with foundry v1.5.1 (alloy 1.1.x)
alloy-chains = "0.2"
alloy-primitives = "1.4.1"
alloy-json-abi = "0.8"
alloy-signer = "1.1"
alloy-signer-ledger = "1.1"
alloy-signer-trezor = "1.1"
alloy-sol-types = "1.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
comfy-table = "7"

# Environment
dotenvy = "0.15"

# File locking
fs2 = "0.4"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Error handling & async
thiserror = "2"
anyhow = "1"
eyre = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
handlebars = "6"

# Patch: svm-rs-builds >=0.5.22 fixes duplicate SOLC_VERSION_0_8_31 constants
# (see https://github.com/alloy-rs/svm-rs/pull/179)
[patch.crates-io]
svm-rs-builds = { git = "https://github.com/alloy-rs/svm-rs", tag = "v0.5.24" }

# Patch: solar crates must match foundry v1.5.1's pinned revision
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }

# Patch: pin alloy crates to v1.1.1 to match foundry v1.5.1's expected versions.
# Without this, cargo resolves alloy to 1.7.x which breaks alloy-evm 0.24.2 and anvil.
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-eip5792 = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-ens = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", tag = "v1.1.1" }
