[workspace]
members = ["crates/treb-cli", "crates/treb-core", "crates/treb-config", "crates/treb-registry", "crates/treb-forge", "crates/treb-verify", "crates/treb-safe", "crates/treb-sol", "xtask"]
resolver = "3"

[workspace.package]
version = "2.0.0"
edition = "2024"
rust-version = "1.89"
authors = ["treb contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
treb-core = { path = "crates/treb-core" }
treb-config = { path = "crates/treb-config" }
treb-registry = { path = "crates/treb-registry" }
treb-forge = { path = "crates/treb-forge" }
treb-verify = { path = "crates/treb-verify" }
treb-safe = { path = "crates/treb-safe" }
treb-sol = { path = "crates/treb-sol" }

# === Foundry + Alloy Version Pinning Strategy ===
# Foundry: tracks nightly tags. foundry-watch.yml auto-bumps when tests pass.
# Stable builds use ci/foundry-stable-pins.toml to patch back to a stable tag.
foundry-config = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-compilers = "0.19.14"
forge-script = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
forge-script-sequence = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-cheatcodes = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-wallets = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-linking = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
forge-verify = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
anvil = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-1b7d0bf1ee503555a4f4f03d0a3966fbe4b864b2" }
revm-inspectors = "0.36"

# Alloy — versions aligned with foundry nightly (alloy 2.0.0-rc)
alloy-chains = "0.2"
alloy-primitives = "1.4.1"
alloy-json-abi = "0.8"
alloy-signer = "2.0.0-rc.0"
alloy-signer-ledger = "2.0.0-rc.0"
alloy-signer-trezor = "2.0.0-rc.0"
alloy-sol-types = "1.5"
alloy-provider = { version = "2.0.0-rc.0", default-features = false, features = ["reqwest-rustls-tls"] }
alloy-consensus = "2.0.0-rc.0"
alloy-network = "2.0.0-rc.0"
alloy-rpc-types = "2.0.0-rc.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
comfy-table = "7"
nucleo-matcher = "0.3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
owo-colors = { version = "4", features = ["supports-colors"] }
unicode-width = "0.2"

# URL parsing
url = "2"

# Environment
dotenvy = "0.15"

# File locking
fs2 = "0.4"

# Testing
num_cpus = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
regex = "1"
similar = "2"

# Error handling & async
thiserror = "2"
anyhow = "1"
eyre = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
handlebars = "6"

# System (background anvil subprocess management)
libc = "0.2"
ureq = "3"


# Patches: match foundry nightly's alloy v2 + dep overrides
[patch.crates-io]
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-consensus-any = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-eip5792 = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-ens = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-anvil = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-any = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-debug = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-rpc-types-txpool = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-signer-turnkey = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-tx-macros = { git = "https://github.com/alloy-rs/alloy", rev = "ffb020e2845321145181089948efe14f074bccd6" }
alloy-evm = { git = "https://github.com/alloy-rs/evm.git", branch = "alloy-2.0" }
op-alloy-consensus = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy-network = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy-rpc-types = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
op-alloy = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-evm = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
alloy-op-hardforks = { git = "https://github.com/foundry-rs/optimism", branch = "alloy-2.0" }
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors.git", branch = "alloy-2.0" }
foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db", branch = "main" }
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-ast = { package = "solar-ast", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
solar-sema = { package = "solar-sema", git = "https://github.com/paradigmxyz/solar", rev = "530f129" }
