[package]
name = "treb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
treb-core = { workspace = true }
treb-config = { workspace = true }
treb-registry = { workspace = true }
treb-forge = { workspace = true }
treb-safe = { workspace = true }
treb-verify = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
alloy-chains = { workspace = true }
handlebars = { workspace = true }
toml = { workspace = true }
nucleo-matcher = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
owo-colors = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
chrono = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
