[package]
name = "treb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["foundry-nightly"]
foundry-nightly = ["treb-forge/foundry-nightly"]
foundry-v1-5-1 = ["treb-forge/foundry-v1-5-1"]

[dependencies]
treb-core = { workspace = true }
treb-config = { workspace = true }
treb-registry = { workspace = true }
treb-forge = { path = "../treb-forge", default-features = false }
treb-safe = { workspace = true }
treb-verify = { workspace = true }
foundry-common = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
comfy-table = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
alloy-chains = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }

toml = { workspace = true }
nucleo-matcher = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
owo-colors = { workspace = true }
unicode-width = { workspace = true }
clap_complete = { workspace = true }
indicatif = "0.17"

[build-dependencies]
clap = { version = "4" }
clap_complete = "4"
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
chrono = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
similar = { workspace = true }
alloy-primitives = { workspace = true }
num_cpus = { workspace = true }
