[package]
name = "treb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
foundry-config = { workspace = true }
foundry-common = { workspace = true }
alloy-primitives = { workspace = true }
alloy-json-abi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
