[package]
name = "treb-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
treb-core = { workspace = true }
treb-config = { workspace = true }

# Foundry
foundry-config = { workspace = true }
foundry-common = { workspace = true }
foundry-compilers = { workspace = true }
forge-script = { workspace = true }
forge-script-sequence = { workspace = true }
foundry-evm = { workspace = true }
foundry-cheatcodes = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
# Use v1.x to match foundry-common's alloy version (workspace has v0.8 for other crates)
alloy-json-abi = "1.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling & async
thiserror = { workspace = true }
anyhow = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
