[package]
name = "treb-forge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
treb-core = { workspace = true }
treb-config = { workspace = true }
treb-registry = { workspace = true }
treb-safe = { workspace = true }
treb-sol = { workspace = true }

# Foundry
foundry-config = { workspace = true }
foundry-common = { workspace = true }
foundry-compilers = { workspace = true }
forge-script = { workspace = true }
forge-script-sequence = { workspace = true }
foundry-evm = { workspace = true }
revm-inspectors = { workspace = true }
foundry-cheatcodes = { workspace = true }
foundry-wallets = { workspace = true }
foundry-linking = { workspace = true }
anvil = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-ledger = { workspace = true }
alloy-signer-trezor = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }
alloy-consensus = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types = { workspace = true }
# Use v1.x to match foundry-common's alloy version (workspace has v0.8 for other crates)
alloy-dyn-abi = "1.5"
alloy-json-abi = "1.5"

# Datetime
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Error handling & async
thiserror = { workspace = true }
anyhow = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }

# System (background anvil subprocess management)
libc = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
