[package]
name = "treb-safe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
treb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
